--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
               <imageName>my-app</imageName>
               <buildArgs>
                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                <!-- <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg> -->
+                <!-- For mostly static native image (only on Linux AMD64 systems) -->
+                <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg>
                 <buildArg>--verbose</buildArg>
                 <!-- For Quick Build (22.1+) -->
 								<!-- <buildArg>-Ob</buildArg> -->
