Removed the temporary workaround

--- a/graal_spec_verbose.yaml
+++ b/graal_spec_verbose.yaml
@@ -20,23 +20,6 @@ steps:
       printf "Contents of /etc/yum.repos.d/:\n $(ls -alh /etc/yum.repos.d/) \n"
       printf "Contents of etc/yum.repos.d/oci-included-ol7.repo file:\n $(cat "etc/yum.repos.d/oci-included-ol7.repo") \n"
       printf "Output of yum list graalvm22-ee-17* :\n $(yum list graalvm22-ee-17*) \n"
-  # - type: Command
-  #   name: "Temporary workaround: Set up the yum repo"
-  #   command: |
-  #     ##### BEGIN: Temporary workaround. This step will move to the build runner.
-  #     (echo -e '[ol7_oci_included]' && \
-  #     echo 'name=Oracle Software for OCI users on Oracle Linux $releasever ($basearch)' && \
-  #     echo 'baseurl=https://yum-phx.oracle.com/repo/OracleLinux/OL7/oci/included/\$basearch/' && \
-  #     echo 'gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle' && \
-  #     echo 'gpgcheck=1' && \
-  #     echo 'enabled=1') > /etc/yum.repos.d/oci-included-ol7.repo
-  #     yum-config-manager --enable ol7_optional_latest
-  #     ## yum-config-manager --enable ol7_oci_included
-  #     ##### END: Temporary workaround. This step will move to the build runner.
-  # - type: Command
-  #   name: "Post-yum repo checks"
-  #   command: |
-  #     printf "Contents of /etc/yum.repos.d/:\n $(ls -alh /etc/yum.repos.d/) \n"
   - type: Command
     name: "Install the latest GraalVM Enterprise 22.x for Java 17 - JDK and Native Image"
     command: |
@@ -72,9 +55,9 @@ steps:
       # mvn --no-transfer-progress clean -Pnative -DskipTests package
       mvn --no-transfer-progress -Pnative -DskipTests package
 outputArtifacts:
-  - name: app_jar
-    type: BINARY
-    location: target/my-app-1.0-SNAPSHOT.jar
+  # - name: app_jar
+  #   type: BINARY
+  #   location: target/my-app-1.0-SNAPSHOT.jar
   - name: app_native_executable
     type: BINARY
     location: target/my-app
