--- a/graal_spec_verbose.yaml
+++ b/graal_spec_verbose.yaml
@@ -16,6 +16,7 @@ steps:
     name: "Pre-yum repo checks"
     command: |
       printf "\n\n Contents of graal_spec.yaml file:\n $(cat graal_spec.yaml) \n\n"
+      printf "\n\n Contents of graal_spec_verbose.yaml file:\n $(cat graal_spec_verbose.yaml) \n\n"
       printf "Contents of /etc/pki/rpm-gpg/:\n $(ls -alh /etc/pki/rpm-gpg/) \n"     
       printf "Contents of /etc/yum.repos.d/:\n $(ls -alh /etc/yum.repos.d/) \n"
       printf "Contents of etc/yum.repos.d/oci-included-ol7.repo file:\n $(cat "etc/yum.repos.d/oci-included-ol7.repo") \n"
