--- a/graal_spec_verbose.yaml
+++ b/graal_spec_verbose.yaml
@@ -55,6 +55,12 @@ steps:
     command: |
       # mvn --no-transfer-progress clean -Pnative -DskipTests package
       mvn --no-transfer-progress -Pnative -DskipTests package
+  - type: Command
+    name: "Upload the Native Image build output to Object Storage"
+    timeoutInSeconds: 140
+    command: |
+      oci os object put --bucket-name ssp-ni-build-json-01 --name ni-build-$(date +'%Y%m%d-%H%M%S').json --file 'target/build.json' --force
+
 outputArtifacts:
   # - name: app_jar
   #   type: BINARY
