--- a/graal_spec_verbose.yaml
+++ b/graal_spec_verbose.yaml
@@ -39,8 +39,8 @@ steps:
       printf "Java version:\n $(java -version) \n"
       printf "Native-image version: $(native-image --version) \n"
       printf "Maven version:\n $(mvn --version) \n"
-      echo "Current dir: $(pwd)"
-      printf "Current dir contents:\n $(ls -alh)"
+      echo "Current dir: $(pwd) \n"
+      printf "Current dir contents:\n $(ls -alh) \n"
       printf "Output of yum list graalvm-17* :\n $(yum list graalvm-17*) \n"
   - type: Command
     name: "Example 1: Build a JAR with the installed Oracle GraalVM for JDK 17 - JDK"
