--- a/graal_spec.yaml
+++ b/graal_spec.yaml
@@ -18,11 +18,11 @@ steps:
     command: |
       export PATH=$JAVA_HOME/bin:$PATH
   # - type: Command
-  #   name: "Example 1: Build a JAR with the installed Oracle GraalVM for JDK 17 - JDK"
+  #   name: "Example 1: Build a JAR with Oracle GraalVM for JDK 17 - JDK"
   #   command: |
   #     mvn --no-transfer-progress clean package
   - type: Command
-    name: "Example 2: Build a native executable with the installed Oracle GraalVM for JDK 17 - Native Image"
+    name: "Example 2: Build a native executable with Oracle GraalVM for JDK 17 - Native Image"
     command: |
       mvn --no-transfer-progress -Pnative -DskipTests package
   - type: Command
