--- a/graal_spec.yaml
+++ b/graal_spec.yaml
@@ -5,24 +5,24 @@ runAs: root
 shell: bash
 env:
   variables:
-    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm-java17"
+    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm-java21"
     # PATH is a reserved variable and cannot be defined as a variable.
     # However, PATH can be changed in a build step and the change is visible in subsequent steps.
 steps:
   - type: Command
-    name: "Install the latest Oracle GraalVM for JDK 17 - JDK and Native Image"
+    name: "Install the latest Oracle GraalVM for JDK 21 - JDK and Native Image"
     command: |
-      yum -y install graalvm-17-native-image
+      yum -y install graalvm-21-native-image
   - type: Command
     name: "Set the PATH here. JAVA_HOME already set in env > variables above."
     command: |
       export PATH=$JAVA_HOME/bin:$PATH
   # - type: Command
-  #   name: "Example 1: Build a JAR with Oracle GraalVM for JDK 17 - JDK"
+  #   name: "Example 1: Build a JAR with Oracle GraalVM JDK"
   #   command: |
   #     mvn --no-transfer-progress clean package
   - type: Command
-    name: "Example 2: Build a native executable with Oracle GraalVM for JDK 17 - Native Image"
+    name: "Example 2: Build a native executable with Oracle GraalVM Native Image"
     command: |
       mvn --no-transfer-progress -Pnative -DskipTests package
   - type: Command
