--- a/graal_spec_verbose.yaml
+++ b/graal_spec_verbose.yaml
@@ -8,7 +8,7 @@ runAs: root
 shell: bash
 env:
   variables:
-    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm-java17"
+    "JAVA_HOME" : "/usr/lib64/graalvm/graalvm-java21"
     # PATH is a reserved variable and cannot be defined as a variable.
     # However, PATH can be changed in a build step and the change is visible in subsequent steps.
 steps:
@@ -20,11 +20,11 @@ steps:
       printf "Contents of /etc/pki/rpm-gpg/:\n $(ls -alh /etc/pki/rpm-gpg/) \n"     
       printf "Contents of /etc/yum.repos.d/:\n $(ls -alh /etc/yum.repos.d/) \n"
       printf "Contents of etc/yum.repos.d/oci-included-ol7.repo file:\n $(cat "etc/yum.repos.d/oci-included-ol7.repo") \n"
-      printf "Output of yum list graalvm-17* :\n $(yum list graalvm-17*) \n"
+      printf "Output of yum list graalvm-21* :\n $(yum list graalvm-21*) \n"
   - type: Command
-    name: "Install the latest Oracle GraalVM for JDK 17 - JDK and Native Image"
+    name: "Install the latest Oracle GraalVM for JDK 21 (Native Image and JDK)"
     command: |
-      yum -y install graalvm-17-native-image
+      yum -y install graalvm-21-native-image
   - type: Command
     name: "Set the PATH here. JAVA_HOME already set in env > variables above."
     command: |
@@ -41,9 +41,9 @@ steps:
       printf "Maven version:\n $(mvn --version) \n"
       echo "Current dir: $(pwd)"
       printf "Current dir contents:\n $(ls -alh) \n"
-      printf "Output of yum list graalvm-17* :\n $(yum list graalvm-17*) \n"
+      printf "Output of yum list graalvm-21* :\n $(yum list graalvm-21*) \n"
   - type: Command
-    name: "Example 1: Build a JAR with Oracle GraalVM for JDK 17 - JDK"
+    name: "Example 1: Build a JAR with Oracle GraalVM JDK"
     command: |
       mvn --no-transfer-progress clean package
   # - type: Command
@@ -51,7 +51,7 @@ steps:
   #   command: |
   #     mvn clean
   - type: Command
-    name: "Example 2: Build a native executable with Oracle GraalVM for JDK 17 - Native Image"
+    name: "Example 2: Build a native executable with Oracle GraalVM Native Image"
     command: |
       # mvn --no-transfer-progress clean -Pnative -DskipTests package
       mvn --no-transfer-progress -Pnative -DskipTests package
