--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
               <buildArgs>
                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                 <!-- For mostly static native image (only on Linux AMD64 systems) -->
-                <!-- <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg> -->
+                <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg>
                 <buildArg>--verbose</buildArg>
                 <!-- For Quick Build (22.1+) -->
-                <!-- <buildArg>-Ob</buildArg> -->
-                <!-- <buildArg>-H:BuildOutputJSONFile=build.json</buildArg> -->
+                <buildArg>-Ob</buildArg>
+                <buildArg>-H:BuildOutputJSONFile=build.json</buildArg>
               </buildArgs>
             </configuration>
           </plugin>
